// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`B.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`C.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./D');
require('./E');
require('./F');
require('./G');

=====================================output=====================================
require("./D");
require("./E");
require("./F");
require("./G");

================================================================================
`;

exports[`D.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`E.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`F.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`G.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./H');

=====================================output=====================================
require("./H");

================================================================================
`;

exports[`H.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`I.js - flow-verify 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./A');

=====================================output=====================================
require("./A");

================================================================================
`;
